Issue #19 Add vendor prefixes to CSS and start responsive on small tablet

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ h3 {
     color: #a36a09;
     font-weight: normal;
     text-align: center;
+    line-height: 1.2em;
 }
 
 h2 {
@@ -81,7 +82,11 @@ li {
 }
 
 .symbols-key {
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
@@ -113,10 +118,20 @@ li {
 }
 
 .report-container {
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
     align-self: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
     padding: 0 5%;
 }
@@ -163,16 +178,30 @@ li {
 
 .first-column-score {
     width: 30%;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
     padding: 5px;
 }
 
 .score-row {
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     height: 100px;
     text-align: center;
@@ -187,17 +216,31 @@ li {
 .score {
     padding: 5px;
     margin-right: 2px;
-    margin-bottom:  2px;
+    margin-bottom: 2px;
     border-width: 0;
     border-style: solid;
     border-radius: 5px;
     width: 20%;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
     align-self: auto;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-flex: 1 1 0px;
+    -ms-flex: 1 1 0px;
     flex: 1 1 0px;
 }
 
@@ -284,15 +327,14 @@ li {
         margin-bottom: 5px;
         text-decoration: underline;
     }
-}
 
-/* Landscape phones and down */
-
-@media (max-width: 480px) {
     .first-column-score {
         width: 100%;
     }
+
     .first-column-score img {
+        -webkit-order: -1;
+        -ms-flex-order: -1;
         order: -1;
     }
 
@@ -300,3 +342,7 @@ li {
         margin-bottom: 10px;
     }
 }
+
+/* Landscape phones and down */
+
+@media (max-width: 480px) {}
